# mobile-atlas

./: .gitignore  .mailmap  README.md  flake.nix  probe.py  sim.py  test_a1.json  test_config.json  test_telekom.json
hardware/: README.md
images/: current_deployment.png.license  (+3 more)
mobileatlas/management/: MANIFEST.in  README.md  default.nix  example-config.toml  flake.nix  pyproject.toml  requirements.txt
mobileatlas/management/src/moat_management/: __init__.py  auth.py  cli.py  config.py  db.py  main.py  models.py  probe_routes.py  pydantic_models.py  resources.py  routes.py  token_routes.py  wg_config.py  wgtest.py  wireguard_routes.py
mobileatlas/management/src/moat_management/static/: base.css  base.js
mobileatlas/management/src/moat_management/templates/: base.html  probe.html  probe_startups.html  probe_status.html  probe_systeminformations.html  tokens.html  tunnel.html  wireguard.html
mobileatlas/management/src/moat_management/tunnel_auth/: auth.py  models.py  routes.py  tunnel_interface_routes.py
mobileatlas/tunnel/src/moatt_clients/: default.nix  flake.nix  pyproject.toml  requirements.txt
mobileatlas/tunnel/src/moatt_clients/moatt_clients/: client.py  errors.py  probe_client.py  provider_client.py  streams.py
mobileatlas/tunnel/src/moatt_clients/src/moatt_clients/: client.py  errors.py  moat_management.py  probe_client.py  provider_client.py  streams.py  types.py
mobileatlas/tunnel/src/moatt_server/: alembic.ini  default.nix  dev-requirements.txt  flake.nix  pyproject.toml  requirements.txt  server.py  start.sh  status_check_cron.py  wsgi.py
mobileatlas/tunnel/src/moatt_server/alembic/: env.py  script.py.mako
mobileatlas/tunnel/src/moatt_server/migrations/versions/: 66cb7cb6f59c_initial_migration.py
mobileatlas/tunnel/src/moatt_server/moatt_server/: __init__.py  apdu_stream.py  auth.py  config.py  flask_http_auth.py  gc.py  models.py  probe_handler.py  provider_handler.py  routes.py  server.py  util.py  utils.py
mobileatlas/tunnel/src/moatt_server/moatt_server/management/: .gitignore  README.md  __init__.py  config.py  probe_routes.py  requirements.txt  routes.py  sim_stub.py  status_check_cron.py  token_auth.py  wireguard_routes.py
mobileatlas/tunnel/src/moatt_server/moatt_server/management/app/: __init__.py  models.py  probe_routes.py  routes.py  token_auth.py  wireguard_routes.py
mobileatlas/tunnel/src/moatt_server/moatt_server/management/app/static/: base.js
mobileatlas/tunnel/src/moatt_server/moatt_server/management/static/: base.css  base.js
mobileatlas/tunnel/src/moatt_server/moatt_server/management/templates/: base.html  index.html  probe.html  probe_startups.html  probe_status.html  probes.html  tokens.html  wireguard.html
mobileatlas/tunnel/src/moatt_server/moatt_server/management/tests/: test_wireguard_routes.py
mobileatlas/tunnel/src/moatt_server/moatt_server/rest/: __init__.py  auth.py  flask_http_auth.py  routes.py
mobileatlas/tunnel/src/moatt_server/moatt_server/tunnel/: apdu_stream.py  connection_queue.py  handler.py  handlers.py  probe_handler.py  provider_handler.py  util.py
mobileatlas/tunnel/src/moatt_server/src/moatt_server/: __main__.py  auth.py  auth_handler.py  config.py  db.py  gc.py  models.py  utils.py
mobileatlas/tunnel/src/moatt_server/src/moatt_server/auth_handlers/: __init__.py  moat_management.py
mobileatlas/tunnel/src/moatt_server/src/moatt_server/rest/: __init__.py  auth.py  db.py  flask_http_auth.py  main.py  models.py  routes.py
mobileatlas/tunnel/src/moatt_server/src/moatt_server/tunnel/: __main__.py  apdu_stream.py  cli.py  connection_queue.py  handler.py  probe_handler.py  provider_handler.py  server.py  util.py
mobileatlas/wg-daemon/: default.nix  pyproject.toml  requirements.txt
mobileatlas/wg-daemon/src/wg_daemon/: cli.py  config.py  models.py  routes.py
mobileatlas/wg-daemon/systemd/: wg-daemon.service  wg-daemon.socket
(+220 files in other folders)
