[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "moat-management"
dynamic = [ "version", "dependencies" ]

[project.scripts]
moat-management = "moat-management.cli:main"

[tool.setuptools.dynamic.version]
attr = "moat_management.VERSION"

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"
