[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "moat-management"
dynamic = [ "version", "dependencies", "optional-dependencies" ]

[project.scripts]
moat-management = "moat_management.cli:main"

[tool.setuptools.dynamic.version]
attr = "moat_management.VERSION"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt" ]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = [ "dev-requirements.txt" ]
