[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moatt_clients"
version = "0.0.1"
dependencies = [
  "moatt_types @ git+https://measurement-probe-read:sbaglpat-m5Ut9LybXAs1AdMSG1Qa@gitlab.sba-research.org/pfrenzel/mobile-atlas-tunnel@main#subdirectory=src/moatt_types"
]

[tool.setuptools.packages.find]
exclude = ["test"]
